Bug 1658996 - Part 1: Introduce new methods around click event activation behavior. r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D183265